--- a/CSS project-najnoviji/style.css
+++ b/CSS project-najnoviji/style.css
@@ -10,6 +10,14 @@
 }
 body{
     font-family: Kiu;
+    
+}
+
+.main-div{
+    max-width: 1200px;
+    margin: 0px;
+    padding: 20px;
+    
 }
 
 header {
@@ -27,12 +35,17 @@ h2 {
 
 .mail-us{
     color: black;
+    font-size: 30px;
+    margin-bottom: 5px;
 }
 .get-in {
     color: black;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
     margin-top: 20px;
+    font-size: 30px;
 }
+
+
 
 
 
@@ -47,11 +60,38 @@ h2 {
         padding: 0 20px; 
     }
 
+    .whoWeAre-h2{
+        display: flex;
+        justify-content: center;
+        flex-direction:column;
+        align-items: center;
+    }
+
 
 .whoWeAre-h2 h2 {
     color: black;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     margin-top: 20px;
+    font-size: 30px;
+}
+
+.content-wrapper{
+    display: flex;
+    gap: 7px;
+    align-items: center;
+}
+
+.line{
+    height: 0;
+    width: 40px;
+    border: 1px solid black;
+}
+
+.box{
+    width: 20px;
+    height: 20px;
+    border: 2px solid black;
+    transform: rotate(45deg)
 }
 
 
@@ -144,16 +184,45 @@ h3 {
     color: gray;
 }
 
+.wps{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    text-align: center;
+    margin-bottom: 30px;
+}
 
+.git{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+    
+}
+
+.mail-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+    
+}
 
 .wps-h2 {
+
     color: black;
-    margin-bottom: 50px;
+    margin-bottom: 5px;
+    font-size: 30px;
 }
 
 
 
 .feedback-item {
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    margin-bottom: 20px;
     background-color: cornflowerblue;
     padding: 5px;
     padding-left: 10px;
@@ -161,12 +230,7 @@ h3 {
     
 }
 
-.feedback-item {
-    display: flex;
-    flex-direction: column; 
-    align-items: flex-start; 
-    margin-bottom: 20px;
-}
+
 
 .feedback-item img {
     width: 60px; 
@@ -174,7 +238,10 @@ h3 {
     border-radius: 50%; 
     object-fit: cover; 
     margin-right: 10px; 
+    
 }
+
+
 
 .feedback-item h3 {
     margin: 0;
@@ -187,6 +254,8 @@ h3 {
     margin-bottom: 5px;
     padding: 5px;   
 }
+
+
 
 .contact-item1{
   background-color: rgb(129, 205, 129);
@@ -296,7 +365,7 @@ textarea {
 
 .contact-form-section h2{
     margin-top: 50px;
-    margin-bottom: 20px;
+    
 }
 
 .container{
@@ -342,6 +411,7 @@ textarea {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 
 .box-4{
@@ -398,19 +468,23 @@ iframe {
     padding: 20px;
     text-align: center;
     width: 100%;
+    height: auto;
+    
 }
 
 .footer-nav {
     display: flex;
     justify-content: center; 
+    
 }
 
 .footer-links {
     list-style: none; 
     display: flex;
-    gap: 20px; 
+    gap: 10px; 
     padding: 0;
     margin: 0;
+    flex-wrap: wrap;
 }
 .footer-links li a {
     color: #fff; 
@@ -422,6 +496,12 @@ iframe {
   color: white;
   margin-top: 25px;
   margin-bottom: 15px;
+}
+
+
+.phone-img{
+    width: 17px;
+    margin-right: 5px;
 }
 
 @media screen and (min-width: 768px) {
@@ -502,7 +582,7 @@ iframe {
           }
 
           .text-container{
-            width: 50%;
+            width: 49%;
             margin: 0px;
             padding: 0px;
             
@@ -516,13 +596,17 @@ iframe {
         }
 
         .image-container{
-            width: 50%;
+            width: 49%;
            height: unset;
         }
 
         .image-container img{
             width: 100%;
             height: auto;
+        }
+
+        .dream-home{
+            margin-bottom: 110px;
         }
 
      .dream-home h3{
@@ -542,14 +626,22 @@ iframe {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        
+        margin-left: px;
      }
 
      .feedback-item{
-        width: 40%;
-        margin-left: 40px;
-        margin-bottom: 40px;
-        padding-bottom: 20px;
+        width: 35%;
+        margin: 20px;
+        margin-left: 50px;
+       
      }
+
+     #feedback-item3{
+        margin-left: 0px;
+     }
+    
+
      iframe{
         width: 100%;
      }
@@ -568,5 +660,51 @@ iframe {
      
 
   
+}
+
+@media screen and (min-width: 1024px) {
+
+    .whoWeAre{
+        flex-direction: row; 
+        justify-content: space-between;
+        align-items: flex-start;
+        max-width: 100%;
+        margin-bottom: 50px;
+        gap: unset;
+    }
+
+    .whoWeAre > div {
+        margin: 0 10px; /* Smanjenje horizontalnog margina */
+        flex: 1; /* Podesite širinu tako da divovi zauzmu jednaku širinu */
+    }
+
+    .text-container, .image-container, .dream-home {
+        width: 30%; 
+         
+    }
+
+  .feedback-container{
+    flex-direction: row;
+    flex-wrap: unset;
+    margin-bottom: 40px;
+    justify-content: space-between;
+    margin-left: 20px;
+    margin-right: 20px;
+    gap: 10px;
+  }
+
+.feedback-item{
+    width: 32%;
+    padding: 20px 20px;
+    margin: 0px;
+    
+}
+
+.container{
+    flex-wrap: unset;
+}
+
+
+
 }
 
