--- a/project1/style.css
+++ b/project1/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 body{
@@ -28,6 +30,33 @@ h2{
     
 }
 
+.carusel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+
+
+.carusel img{
+    height: 500px;
+    border: 3px solid grey;
+}
+.img-wrapper{
+    width: 80%;
+    text-align: center;
+}
+
+.carusel button {
+    background-color: transparent;
+    padding: 5px 15px;
+    color: darkgreen;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+}
+
 .card {
     
     background-color: white;
@@ -39,23 +68,4 @@ h2{
     text-align: center;
 }
 
-.carusel{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-}
 
-.carusel img{
-    width: 500px;
-    border: 3px solid grey;
-}
-
-.carusel button {
-    background-color: transparent;
-    padding: 5px 15px;
-    color: darkgreen;
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-}
