--- a/React/React-Bit-show/src/App.css
+++ b/React/React-Bit-show/src/App.css
@@ -30,8 +30,49 @@ body {
 
 .card{
   border: 2px solid gray;
+  cursor: pointer;
 }
 
 h3{
   padding-left: 10px;
 } 
+
+.single-page{
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.single-page-show-name{
+  margin: 15px;
+}
+
+.single-page-summary{
+  color: white;
+}
+.show-image{
+  width: 450px;
+}
+
+.single-page-summary{
+  width: 60%;
+  padding: 20px;
+  background-color: gray;
+  margin: 10px;
+}
+
+.wrapper{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+
+.seasons{
+  color: white;
+  font-size: 26px;
+  padding: 10px;
+}
+
