--- a/React/React-Bit-show/src/App.css
+++ b/React/React-Bit-show/src/App.css
@@ -44,35 +44,42 @@ h3{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .single-page-show-name{
   margin: 15px;
 }
+/* .single-page-image{
+  width: 49%;
+} */
 
-.single-page-summary{
-  color: white;
-}
 .show-image{
-  width: 450px;
+  width: 250px;
 }
-
-.single-page-summary{
-  width: 60%;
-  padding: 20px;
-  background-color: gray;
-  margin: 10px;
-}
-
 .wrapper{
   display: flex;
   gap: 30px;
   justify-content: center;
+  flex-wrap: nowrap; 
+  
 }
 
 .seasons{
   color: white;
-  font-size: 26px;
+  font-size: 14px;
   padding: 10px;
+  /* width: 49%; */
+ 
 }
+.single-page-summary{
+  width: 70%;
+  padding: 10px;
+  background-color: gray;
+  margin: 10px;
+  color: white;
+}
+
+
+
 
